--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0"
+    },
+    "scripts": {
+        "test": "phpunit tests"
     }
 }
